--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -19,7 +19,8 @@ body{
     position: absolute;
     top: 0;
     right: 0;
-    height: 100vh;
+    bottom: 0;
+    height: calc(100vh + 1px);
     width: auto;
     z-index: 9999;
 }
