--- a/style/pages/home.scss
+++ b/style/pages/home.scss
@@ -9,7 +9,7 @@
 
 @import "../components/hero-section";
 @import "../components/about-section";
-// @import "../components/services-section";
-// @import "../components/projects-section";
+@import "../components/services-section";
+@import "../components/projects-section";
 // @import "../components/team-section";
 // @import "../components/contact-section";
