--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -115,10 +115,12 @@ header.big-screen .logo a img {
 }
 
 header.big-screen .menu-btn {
-  margin-right: 640px;
+  width: 80px;
+  margin-right: 624px;
 }
 
 header.big-screen .menu-btn button {
+  width: 80px;
   border: none;
   outline: none;
   background-color: transparent;
@@ -126,7 +128,44 @@ header.big-screen .menu-btn button {
   font-size: 16px;
   color: #13063D;
   font-weight: 400;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   cursor: pointer;
+}
+
+header.big-screen .menu-btn button .menu-icon {
+  width: 20px;
+  height: 20px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 4px 4px 4px;
+      grid-template-columns: 4px 4px 4px;
+  -ms-grid-rows: 4px 4px 4px;
+      grid-template-rows: 4px 4px 4px;
+  grid-gap: 4px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+header.big-screen .menu-btn button .menu-icon div {
+  width: 4px;
+  height: 4px;
+  background-color: #3913B8;
 }
 
 /* HEADER FOR SMALL SCREENS */
@@ -272,27 +311,6 @@ main section#hero a {
   border-top-right-radius: 25px;
 }
 
-main {
-  width: 100vw;
-  height: auto;
-  background-color: #FCFFFF;
-  margin: 80px auto 0 auto;
-  padding: 0 140px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 main section#about {
   width: 100%;
   height: auto;
@@ -315,7 +333,7 @@ main section#about {
 
 main section#about h2 {
   width: 56%;
-  margin-bottom: 40px;
+  margin-bottom: 80px;
   text-align: center;
 }
 
@@ -327,5 +345,307 @@ main section#about p {
 
 main section#about p:not(:last-child) {
   margin-bottom: 40px;
+}
+
+main section#services {
+  width: 100%;
+  height: auto;
+  margin: 0px 80px 60px 80px;
+  padding: 0px 0 160px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main section#services h2 {
+  width: 56%;
+  margin-bottom: 80px;
+  text-align: center;
+}
+
+main section#services .services-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  grid-gap: 80px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main section#services .services-container article.service {
+  width: 460px;
+  height: 100%;
+  -webkit-box-shadow: 0px 25px 50px rgba(57, 19, 184, 0.05);
+          box-shadow: 0px 25px 50px rgba(57, 19, 184, 0.05);
+  background-color: #FFFFFF;
+  padding: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+main section#services .services-container article.service:hover {
+  -webkit-transform: translateY(4px);
+          transform: translateY(4px);
+  -webkit-box-shadow: 1px 4px 4px 1px rgba(57, 19, 184, 0.05);
+          box-shadow: 1px 4px 4px 1px rgba(57, 19, 184, 0.05);
+}
+
+main section#services .services-container article.service img.service__pattern {
+  margin-right: 30px;
+}
+
+main section#services .services-container article.service div.service__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+main section#services .services-container article.service div.service__info h3 {
+  margin-bottom: 15px;
+}
+
+main section#services .services-container article.service div.service__info p {
+  font-size: 14px;
+  line-height: 17px;
+}
+
+main section#services .services-container article.service a {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 9px;
+  height: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main section#services .services-container article.service a img.right-arrow {
+  width: 9px;
+  height: 12px;
+}
+
+main section#projects {
+  width: 100%;
+  height: auto;
+  margin: 0px 80px 60px 80px;
+  padding: 0px 0 160px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main section#projects h2 {
+  width: 40%;
+  margin-bottom: 80px;
+  text-align: center;
+}
+
+main section#projects .projects-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-content: center;
+  align-items: center;
+}
+
+main section#projects .projects-container article.project {
+  width: 290px;
+  height: auto;
+  -webkit-box-shadow: 0px 25px 50px rgba(57, 19, 184, 0.05);
+          box-shadow: 0px 25px 50px rgba(57, 19, 184, 0.05);
+  background-color: #007AFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+main section#projects .projects-container article.project:not(:last-child) {
+  margin-right: 40px;
+}
+
+main section#projects .projects-container article.project:hover {
+  -webkit-transform: translateY(4px);
+          transform: translateY(4px);
+  -webkit-box-shadow: 1px 4px 4px 1px rgba(57, 19, 184, 0.05);
+          box-shadow: 1px 4px 4px 1px rgba(57, 19, 184, 0.05);
+}
+
+main section#projects .projects-container article.project img.project__image {
+  width: 100%;
+  height: auto;
+  opacity: .95;
+}
+
+main section#projects .projects-container article.project:nth-child(1) div.project__info {
+  background-color: #007AFF;
+}
+
+main section#projects .projects-container article.project:nth-child(2) div.project__info {
+  background-color: #FF5A6D;
+}
+
+main section#projects .projects-container article.project:nth-child(3) div.project__info {
+  background-color: #3913B8;
+}
+
+main section#projects .projects-container article.project:nth-child(4) div.project__info {
+  background-color: #00cfdc;
+}
+
+main section#projects .projects-container article.project div.project__info {
+  padding: 36px 36px 50px 36px;
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  position: relative;
+}
+
+main section#projects .projects-container article.project div.project__info h3 {
+  margin-bottom: 15px;
+  color: #FFFFFF;
+}
+
+main section#projects .projects-container article.project div.project__info p {
+  font-size: 14px;
+  color: #FFFFFF;
+  line-height: 18px;
+}
+
+main section#projects .projects-container article.project div.project__info a {
+  position: absolute;
+  bottom: 20px;
+  right: 30px;
+  width: 47px;
+  height: 17px;
+  opacity: 0;
+  -webkit-transform: translateY(4px);
+          transform: translateY(4px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+main section#projects .projects-container article.project div.project__info a img.right-arrow {
+  width: 47px;
+  height: 17px;
+}
+
+main section#projects .projects-container article.project:hover div.project__info a {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+}
+
+main section#projects .projects-container article.project:hover div.project__info a:hover {
+  -webkit-transform: translate(4px, 0px);
+          transform: translate(4px, 0px);
 }
 /*# sourceMappingURL=home.css.map */
