--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -1,3 +1,17 @@
+@-webkit-keyframes moveToRight {
+  50% {
+    -webkit-transform: translate(8px, 0px);
+            transform: translate(8px, 0px);
+  }
+}
+
+@keyframes moveToRight {
+  50% {
+    -webkit-transform: translate(8px, 0px);
+            transform: translate(8px, 0px);
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +28,16 @@ body {
   overflow-x: hidden;
 }
 
+::-moz-selection {
+  background-color: #3913B8;
+  color: #FCFFFF;
+}
+
+::selection {
+  background-color: #3913B8;
+  color: #FCFFFF;
+}
+
 .hero-pattern {
   position: absolute;
   top: 0;
@@ -22,6 +46,8 @@ body {
   height: calc(100vh + 1px);
   width: auto;
   z-index: 9999;
+  -webkit-transform: rotateZ(180deg);
+          transform: rotateZ(180deg);
 }
 
 body {
@@ -309,6 +335,16 @@ main section#hero a {
   border-bottom-left-radius: 25px;
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
+  border-bottom-right-radius: 0px;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+}
+
+main section#hero a:hover {
+  border-bottom-left-radius: 25px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
 }
 
 main section#about {
@@ -573,7 +609,7 @@ main section#projects .projects-container article.project:nth-child(3) div.proje
 }
 
 main section#projects .projects-container article.project:nth-child(4) div.project__info {
-  background-color: #00cfdc;
+  background-color: #00c6d2;
 }
 
 main section#projects .projects-container article.project div.project__info {
@@ -642,10 +678,7 @@ main section#projects .projects-container article.project:hover div.project__inf
   opacity: 1;
   -webkit-transform: translateY(0px);
           transform: translateY(0px);
-}
-
-main section#projects .projects-container article.project:hover div.project__info a:hover {
-  -webkit-transform: translate(4px, 0px);
-          transform: translate(4px, 0px);
+  -webkit-animation: moveToRight 1.4s ease 0s infinite;
+          animation: moveToRight 1.4s ease 0s infinite;
 }
 /*# sourceMappingURL=home.css.map */
