--- a/style/abstracts/_variables.scss
+++ b/style/abstracts/_variables.scss
@@ -27,11 +27,11 @@ $paragraph-font-size-1: 20px;
 $paragraph-font-size-2: 16px;
 $paragraph-font-size-3: 14px;
 
-// $font-family-1: 'Roboto', sans-serif;
-// $font-family-2: 'Montserrat', sans-serif;
-
-$font-family-1: 'Playfair Display', serif;
+$font-family-1: 'Roboto', sans-serif;
 $font-family-2: 'Montserrat', sans-serif;
+
+// $font-family-1: 'Playfair Display', serif;
+// $font-family-2: 'Montserrat', sans-serif;
 
 
 
