--- a/style/components/_services-section.scss
+++ b/style/components/_services-section.scss
@@ -26,11 +26,11 @@ section#services{
         justify-content: center;
         align-items: center;
     article.service{
-        width: 460px;
+        width: 500px;
         height: 100%;
         box-shadow: $card-box-shadow;
         background-color: $primary-background;
-        padding: 30px;
+        padding: 0 30px 0 0;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -38,10 +38,10 @@ section#services{
         position: relative;
         transition: all .3s ease;
 
-        &:hover{
-            transform: translateY(4px);
-            box-shadow: 1px 4px 4px 1px rgba(57, 19, 184, 0.05);
-        }
+        // &:hover{
+        //     transform: translateY(4px);
+        //     box-shadow: 1px 4px 4px 1px rgba(57, 19, 184, 0.05);
+        // }
 
         img.service__pattern {
             margin-right: 30px;
