--- a/style/components/_about-section.scss
+++ b/style/components/_about-section.scss
@@ -4,8 +4,8 @@ main{
 section#about{
     width: 100%;
     height: auto; 
-    margin: 0px 80px 60px 80px;
-    padding: 160px 0;
+    margin: 0px 80px 80px 80px;
+    padding: 80px 0 160px 0;
     // border: $border-check-2;
     display: flex;
     flex-direction: column;
