--- a/style/components/_projects-section.scss
+++ b/style/components/_projects-section.scss
@@ -3,7 +3,7 @@ main{
     section#projects{
         width: 100%;
         height: auto; 
-        margin: 0px 80px 60px 80px;
+        margin: 0px 80px 80px 80px;
         padding: 0px 0 160px 0;
         // border: $border-check-2;
         display: flex;
@@ -12,7 +12,7 @@ main{
         align-items: center;
         h2{
             width: 40%;
-            margin-bottom: 80px;
+            margin-bottom: 100px;
             text-align: center;
         }
        
@@ -26,9 +26,9 @@ main{
             justify-content: center;
             align-items: center;
         article.project{
-            width: 290px;
+            width: 300px;
             height: auto;
-            box-shadow: $card-box-shadow;
+            // box-shadow: $card-box-shadow;
             background-color: $main-blue;
             // padding: 30px;
             display: flex;
@@ -39,14 +39,15 @@ main{
             position: relative;
 
             &:not(:last-child){
-                margin-right: 40px;
+                margin-right: 60px;
             }
             
             transition: all .3s ease;
     
             &:hover{
                 transform: translateY(4px);
-                box-shadow: 1px 4px 4px 1px rgba(57, 19, 184, 0.05);
+                // box-shadow: 1px 4px 4px 1px rgba(57, 19, 184, 0.05);
+                 box-shadow: $card-box-shadow;
             }
     
             img.project__image {
@@ -89,7 +90,7 @@ main{
                 justify-content: center;
                 align-items: flex-start;
                 position: absolute;
-                top:152%;
+                top:154%;
                 left: 50%;
                 transform: translate(-50%,-50%);
                 transition: all .3s ease;
