--- a/style/pages/home.scss
+++ b/style/pages/home.scss
@@ -12,5 +12,5 @@
 @import "../components/about-section";
 @import "../components/services-section";
 @import "../components/projects-section";
-// @import "../components/team-section";
+@import "../components/team-section";
 // @import "../components/contact-section";
