--- a/style/components/_projects-section.scss
+++ b/style/components/_projects-section.scss
@@ -47,13 +47,13 @@ main{
             &:hover{
                 transform: translateY(4px);
                 // box-shadow: 1px 4px 4px 1px rgba(57, 19, 184, 0.05);
-                 box-shadow: $card-box-shadow;
+                //  box-shadow: $card-box-shadow;
             }
     
             img.project__image {
                 width: 100%;
                 height: auto;
-                opacity: .95;
+                opacity: .96;
                 // margin-right: 30px;
                 
             }
