--- a/style/components/_services-section.scss
+++ b/style/components/_services-section.scss
@@ -29,7 +29,7 @@ section#services{
         width: 500px;
         height: 100%;
         box-shadow: $card-box-shadow;
-        background-color: $primary-background;
+        background-color: $secondary-background;
         padding: 0 30px 0 0;
         display: flex;
         flex-direction: row;
