--- a/style/layouts/_header.scss
+++ b/style/layouts/_header.scss
@@ -13,7 +13,7 @@ header.big-screen {
     justify-content: space-between;
     width: 100vw;
     height: 80px;
-    z-index: 999;
+    z-index: 9999;
     padding: 20px 80px;
     // border: $border-check-1;
 
@@ -23,6 +23,7 @@ header.big-screen {
     .logo{
         // border: $border-check-2;        
         flex-basis: 120px;
+        z-index: 99999;
 
             display: flex;
             flex-direction: column;
@@ -84,7 +85,31 @@ header.big-screen {
         }
     } 
     
-  
+  nav{
+    position: fixed;
+    top: -640px;
+    left: 0;
+    right: 0;
+    display: none;
+    height: 0vh;
+    width: 100vw;
+    // display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    background-color: $primary-background;
+    padding:80px 48px 0 48px;
+    // padding:80px 0 0 0;
+    transition: all .3s ease-out;
+    z-index: 99999;
+
+    &.open {
+        display: flex;
+        height: 100vh;
+        width: 100vw;
+        animation: menuDown .5s cubic-bezier(0.23, 0.28, 0.34, 0.93) forwards;
+      }
+  }
 
 }
 
