--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -12,6 +12,24 @@
   }
 }
 
+@-webkit-keyframes menuDown {
+  0% {
+    top: -640px;
+  }
+  100% {
+    top: 0px;
+  }
+}
+
+@keyframes menuDown {
+  0% {
+    top: -640px;
+  }
+  100% {
+    top: 0px;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -21,6 +39,21 @@
 
 html {
   scroll-behavior: smooth;
+}
+
+html.has-scroll-smooth {
+  overflow: hidden;
+}
+
+html.has-scroll-dragging {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.has-scroll-smooth body {
+  overflow: hidden;
 }
 
 body {
@@ -38,18 +71,53 @@ body {
   color: #FCFFFF;
 }
 
-.hero-pattern {
+/*! locomotive-scroll v3.3.11 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
+/* START */
+.c-scrollbar {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 11px;
+  height: 100vh;
+  -webkit-transform-origin: center right;
+          transform-origin: center right;
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: transform 0.3s, opacity 0.3s;
+  transition: transform 0.3s, opacity 0.3s, -webkit-transform 0.3s;
+  opacity: 0;
+  z-index: 9999;
+}
+
+.c-scrollbar:hover {
+  -webkit-transform: scaleX(1.45);
+          transform: scaleX(1.45);
+}
+
+.c-scrollbar:hover,
+.has-scroll-scrolling .c-scrollbar,
+.has-scroll-dragging .c-scrollbar {
+  opacity: 1;
+}
+
+.c-scrollbar_thumb {
   position: absolute;
   top: 0;
   right: 0;
-  bottom: 0;
-  height: calc(100vh + 1px);
-  width: auto;
-  z-index: 9999;
-  -webkit-transform: rotateZ(180deg);
-          transform: rotateZ(180deg);
+  background-color: #3913B8;
+  opacity: 1;
+  width: 7px;
+  margin: 2px;
+  cursor: -webkit-grab;
+  cursor: grab;
 }
 
+.has-scroll-dragging .c-scrollbar_thumb {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+}
+
+/* END */
 body {
   font-family: "Roboto", sans-serif;
   color: #13063D;
@@ -118,13 +186,14 @@ header.big-screen {
           justify-content: space-between;
   width: 100vw;
   height: 80px;
-  z-index: 999;
+  z-index: 9999;
   padding: 20px 80px;
 }
 
 header.big-screen .logo {
   -ms-flex-preferred-size: 120px;
       flex-basis: 120px;
+  z-index: 99999;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -216,6 +285,41 @@ header.big-screen .menu-btn button .menu-icon div {
   width: 4px;
   height: 4px;
   background-color: #3913B8;
+}
+
+header.big-screen nav {
+  position: fixed;
+  top: -640px;
+  left: 0;
+  right: 0;
+  display: none;
+  height: 0vh;
+  width: 100vw;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  background-color: #FFFFFF;
+  padding: 80px 48px 0 48px;
+  -webkit-transition: all .3s ease-out;
+  transition: all .3s ease-out;
+  z-index: 99999;
+}
+
+header.big-screen nav.open {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  -webkit-animation: menuDown 0.5s cubic-bezier(0.23, 0.28, 0.34, 0.93) forwards;
+          animation: menuDown 0.5s cubic-bezier(0.23, 0.28, 0.34, 0.93) forwards;
 }
 
 /* HEADER FOR SMALL SCREENS */
