--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -17,9 +17,9 @@ html {
     user-select: none;
   }
   
-  .has-scroll-smooth body {
-    overflow: hidden;
-  }
+  // .has-scroll-smooth body {
+  //   overflow: hidden;
+  // }
 
   
 body{
